--- a/chatwin.ui
+++ b/chatwin.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>360</width>
-    <height>644</height>
+    <width>522</width>
+    <height>720</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <rect>
      <x>0</x>
      <y>20</y>
-     <width>361</width>
+     <width>521</width>
      <height>41</height>
     </rect>
    </property>
@@ -38,9 +38,9 @@
   <widget class="QLineEdit" name="msgline">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>565</y>
-     <width>291</width>
+     <x>60</x>
+     <y>630</y>
+     <width>391</width>
      <height>41</height>
     </rect>
    </property>
@@ -51,23 +51,23 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>565</y>
-     <width>41</width>
+     <x>460</x>
+     <y>630</y>
+     <width>51</width>
      <height>41</height>
     </rect>
    </property>
    <property name="text">
-    <string>-&gt;</string>
+    <string>✉️</string>
    </property>
   </widget>
   <widget class="QPushButton" name="testbutton_sender">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>610</y>
+     <x>350</x>
+     <y>686</y>
      <width>161</width>
-     <height>27</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -78,16 +78,16 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>610</y>
-     <width>171</width>
-     <height>26</height>
+     <y>685</y>
+     <width>331</width>
+     <height>31</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="name">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>430</x>
      <y>0</y>
      <width>91</width>
      <height>20</height>
@@ -95,6 +95,19 @@
    </property>
    <property name="text">
     <string>name</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="picbutton">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>630</y>
+     <width>41</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>🧷</string>
    </property>
   </widget>
  </widget>
