--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -27,7 +27,7 @@
    <widget class="QSplitter" name="splitter">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>30</x>
       <y>500</y>
       <width>321</width>
       <height>29</height>
@@ -56,7 +56,7 @@ QLineEdit:!focus:empty {
     </widget>
     <widget class="QPushButton" name="pushButton">
      <property name="text">
-      <string>write</string>
+      <string>✏️</string>
      </property>
     </widget>
    </widget>
@@ -110,7 +110,11 @@ QLineEdit:!focus:empty {
     </rect>
    </property>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
